--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && cd node_modules && cd .bin && gh-pages -d ../../build"
+    "deploy": "npm run build && cd node_modules && cd .bin && gh-pages -d ../../build",
+    "gulp": "gulp"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +48,8 @@
   "devDependencies": {
     "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
+    "gulp": "^4.0.2",
+    "gulp-imagemin": "^7.1.0",
     "styled-components": "^5.3.0"
   }
 }
